--- a/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
@@ -41,6 +41,7 @@
 
                                 <input type="submit" name="html" value="Convert to html" class="btn btn-default" />
                                 <input type="submit" name="dashboard" value="Deploy as dashboard" class="btn btn-default" />
+                                <input type="submit" name="cancel" value="Cancel" class="btn btn-default" />
                             </div>
                         </div>
                         </div>
