disable some buttons until functionality is properly implemented

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -1,5 +1,5 @@
 ﻿<!-- Modal -->
-<div id="project-new" class="modal fade modal-dialog" role="dialog">
+<div id="project-new" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
   <!-- Modal content-->
   <div class="modal-content">
     <form id="newproject" class="form-horizontal" action="{% url 'project-new' %}" method="post">
