--- a/kooplexhub/kooplex/hub/templates/app/password-form.html
+++ b/kooplexhub/kooplex/hub/templates/app/password-form.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-<h2>{{ title }}</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="changepasswForm">
@@ -11,7 +10,7 @@
                 <h4>Please, change your password!</h4>
                 <hr />
                 <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">User name</label>
+                    <label for="id_username" class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
                         <input class="form-control" id="id_username" name="username" value="{{ user.username }}" type="hidden" >
                         {{ user.username }}
@@ -19,15 +18,21 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="id_oldpassword" class="col-md-2 control-label">Old Password</label>
+                    <label for="id_oldpassword" class="col-md-2 control-label">Old password</label>
                     <div class="col-md-10">
                         <input class="form-control" id="id_oldpassword" name="oldpassword" placeholder="Password" type="password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="id_newpassword" class="col-md-2 control-label">New Password</label>
+                    <label for="id_newpassword" class="col-md-2 control-label">New password</label>
                     <div class="col-md-10">
                         <input class="form-control" id="id_newpassword" name="newpassword" placeholder="Password" type="password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="id_newpassword2" class="col-md-2 control-label">Retype password</label>
+                    <div class="col-md-10">
+                        <input class="form-control" id="id_newpassword2" name="newpassword2" placeholder="Password" type="password">
                     </div>
                 </div>
                 <div class="form-group">
@@ -36,8 +41,7 @@
                     </div>
                 </div>
                 {% if errors %}
-                    {{ errors }}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
+                <p class="validation-summary-errors">{{ errors }}</p>
                 {% endif %}
             </form>
         </section>
