--- a/kooplexhub/kooplex/hub/templates/app/login.html
+++ b/kooplexhub/kooplex/hub/templates/app/login.html
@@ -2,16 +2,15 @@
 
 {% block content %}
 
-<h2>{{ title }}</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             <form action="." method="post" class="form-horizontal">
                 {% csrf_token %}
-                <h4>Use a local account to log in.</h4>
+                <h4>Please provide your credentials to log in</h4>
                 <hr />
                 <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">User name</label>
+                    <label for="id_username" class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
                         {{ form.username }}
                     </div>
@@ -26,6 +25,7 @@
                     <div class="col-md-offset-2 col-md-10">
                         <input type="hidden" name="next" value="{{ next_page }}" />
                         <input type="submit" value="Log in" class="btn btn-default" />
+                        <a type="button" class="btn btn-default" href="passwordreset">Reset password</a>
                     </div>
                 </div>
                 {% if form.errors %}
