--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -1,16 +1,14 @@
-﻿<!-- Modal -->
-<div id="project-new" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
-  <!-- Modal content-->
+﻿<div id="project-new" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
   <div class="modal-content">
-    <div class="modal-body">
-      <button type="button" class="close" data-dismiss="modal">&times;</button>
-      <h4>Create new project</h4>
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#pane_template" data-toggle="tab">Template</a></li>
-        <li><a href="#pane_volume" data-toggle="tab">Storage ans volumes</a></li>
-      </ul>
-      <form id="newproject" class="form-horizontal" action="{% url 'project-new' %}" method="post">
-        {% csrf_token %}
+    <form id="newproject" class="form-horizontal" action="{% url 'project-new' %}" method="post">
+      {% csrf_token %}
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4>Create new project</h4>
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#pane_template" data-toggle="tab">Template</a></li>
+          <li><a href="#pane_volume" data-toggle="tab">Storage ans volumes</a></li>
+        </ul>
         <div class="tab-content">
           <div id="pane_template" class="tab-pane fade in active">
             {% include 'app/notebooks-new-pane_template.html' %}
@@ -19,13 +17,13 @@
             {% include 'app/notebooks-new-pane_volume.html' %}
           </div>
         </div>   <!-- tab-content -->
-      </form>
-    </div>       <!-- modal-body -->
-    <div class="modal-footer">
-      <label for="footer">Create your project:</label>
-      <button type="submit" class="btn btn-default" name="button" value="public"> Public</button>
-      <button type="submit" class="btn btn-default" name="button" value="private"> Private</button>
-      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-    </div>
-  </div>
-</div>
+      </div>     <!-- modal-body -->
+      <div class="modal-footer">
+        <label for="footer">Create your project:</label>
+        <button type="submit" class="btn btn-default" name="button" value="public"> Public</button>
+        <button type="submit" class="btn btn-default" name="button" value="private"> Private</button>
+        <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+      </div>
+    </form>
+  </div>         <!-- modal-content -->
+</div>           <!-- modal -->
