--- a/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
@@ -1,32 +1,15 @@
-﻿<!-- Modal -->
-<div id="change-image-{{ item.safename }}" class="modal fade modal-dialog" role="dialog">
+<p>The current image for project {{ item.name }} is 
+<strong> 
+  {% for var in item.variables %}
+    {% if var.key == 'container_image' %}
+      {{ var.value }}
+    {% endif %}
+  {% endfor %}
+</strong>.</p>
 
-    <!-- Modal content-->
-    <div class="modal-content">
-        <form class="form-horizontal" action="{% url 'notebooks-change-image'%}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}&description={{ item.description|cut:'#notebook'|cut:'#worksheet'|cut:'#' }}" method="post">
-            {% csrf_token %}
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-                 <h4 class="modal-title">Choose an image for the project?</h4>
-              </div>
-              <div  class="modal-body">
-              Current image: <strong> 
-              {% for var in item.variables %}
-          {% if var.key == 'container_image' %}
-            {{ var.value }}
-        {% endif %}
-        {% endfor %} </strong>
-                        <select id="project.images" name="project.image">
-                            {% for image in notebook_images %}
-                            <option value="{{ image }}">{{ image }}</option>
-                            {% endfor %}
-                        </select>
-              </div>
-              <div class="modal-footer">
-                <button type="submit" class="btn btn-default" title="Change">Change</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              </div>
-        </form>
-    </div>
-
-</div>
+<label>Your choice for the new image:
+<select id="project_images-{{ item.id }}" name="project_image-{{ item.id }}">
+  {% for image in notebook_images %}
+    <option value="{{ image }}">{{ image }}</option>
+  {% endfor %}
+</select>
