--- a/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
@@ -1,95 +1,67 @@
-{% extends "app/layout.html" %}
+<form action="{% url 'notebooks-commit' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
+  {% csrf_token %}
+  <div class="panel-heading">
+    <h4>Commit changes for project <strong>{{ project.name }}</strong></h4>
+  </div>
+  {% if committable_dict.d or committable_dict.m or committable_dict.u %}
+    <div class="panel-body">
+      <label>Select the files you want to commit:</label>
+      <div class="form-group">
+        {% for committable in committable_dict.d %}
+          <input type="checkbox" value="deleted" name="{{ committable }}">
+          {{ committable }} (deleted)<br>
+        {% endfor %}
+        {% for committable in committable_dict.m %}
+          <input type="checkbox" value="modified" name="{{ committable }}">
+          {{ committable }} (modified)<br>
+        {% endfor %}
+        {% for committable in committable_dict.u %}
+          <input type="checkbox" value="untracted" name="{{ committable }}">
+          {{ committable }} (untracted/renamed/new)<br>
+        {% endfor %}
+      </div> <!-- form-group -->
+      <label>Your commit message:</label>
+      <input id="id_message" type="text" name="message" value="Update the project file(s)">
+      <input type="hidden" name="project_id" value="{{ project.id }}" />
+      <input type="hidden" name="target_id" value="{{ target_id }}" />
+      <input type="hidden" name="modified_files" value="" />
+      <input type="hidden" name="deleted_files" value="" />
+      <input type="hidden" name="commitall" value="false" />
+    </div>   <!-- panel-body -->
+    <div class="panel-footer" style="text-align: left;">
+      <input type="submit" name="commitall" value="Commit and push" class="btn btn-primary" />
+      <input type="submit" name="cancel" value="Cancel" class="btn btn-secondary" />
+    </div>   <!-- panel-footer -->
+   {% else %}
+     <p>You have nothing to commit yet.</p>
+   {% endif %}
+</form>
 
-{% block content %}
-
- <div class="row">
-
-        <section id="commitForm">
-            <form action="{% url 'notebooks-commit' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
-                {% csrf_token %}
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4>Commit Changes for {{ project.name }}</h4>
-                    </div>
-                    <div class="panel-body">
-
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <div class="col-md-8">
-                                        <input id="id_message" type="text" name="message" value="Update the project file(s)">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-
-                                <h4> Files to commit:</h4>
-                                <div class="form-group">
-                                    {% for committable in committable_dict.d %}
-                                        <input type="checkbox" value="deleted" name="{{ committable }}">
-                                        {{ committable }} (deleted)<br>
-                                    {% endfor %}
-                                    {% for committable in committable_dict.m %}
-                                        <input type="checkbox" value="modified" name="{{ committable }}">
-                                        {{ committable }} (modified)<br>
-                                    {% endfor %}
-                                    {% for committable in committable_dict.u %}
-                                        <input type="checkbox" value="untracted" name="{{ committable }}">
-                                        {{ committable }} (untracted/renamed/new)<br>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                            </div>
-
-                        <div>
-
-                            <div class="form-group" style="text-align: left;">
-                                    <input type="hidden" name="project_id" value="{{ project.id }}" />
-                                    <input type="hidden" name="target_id" value="{{ target_id }}" />
-                                    <input type="hidden" name="modified_files" value="" />
-                                    <input type="hidden" name="deleted_files" value="" />
-                                    <input type="hidden" name="commitall" value="false" />
-
-                                    <input type="submit" name="commitall" value="Commit and push" class="btn btn-primary" />
-                                    <input type="submit" name="cancel" value="Cancel" class="btn btn-secondary" />
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </form>
-        </section>
-    </div>
-
-
-    <script>
-        function collectCheckedElements() {
-            var inputs = document.getElementsByTagName("input");
-            var modified_files = "";
-            var deleted_files = "";
-            for (var i = 1; i < inputs.length; i++) {
-                if (inputs[i].type == "checkbox") {
-                    if (inputs[i].checked) {
-                        if (inputs[i].value == "deleted") {
-                            deleted_files += "'" + inputs[i].name + "',";
-                        } else {
-                            modified_files += "'" + inputs[i].name + "',";
-                        }
-                        inputs[i].disabled = true;
+<script>
+    function collectCheckedElements() {
+        var inputs = document.getElementsByTagName("input");
+        var modified_files = "";
+        var deleted_files = "";
+        for (var i = 1; i < inputs.length; i++) {
+            if (inputs[i].type == "checkbox") {
+                if (inputs[i].checked) {
+                    if (inputs[i].value == "deleted") {
+                        deleted_files += "'" + inputs[i].name + "',";
+                    } else {
+                        modified_files += "'" + inputs[i].name + "',";
                     }
+                    inputs[i].disabled = true;
                 }
             }
-            if (modified_files.length > 0) {
-                modified_files = modified_files.substring(0, modified_files.length - 1);
-            }
-            if (deleted_files.length > 0) {
-                deleted_files = deleted_files.substring(0, deleted_files.length - 1);
-            }
-            document.getElementsByName("modified_files")[0].value = modified_files;
-            document.getElementsByName("deleted_files")[0].value = deleted_files;
         }
-    </script>
+        if (modified_files.length > 0) {
+            modified_files = modified_files.substring(0, modified_files.length - 1);
+        }
+        if (deleted_files.length > 0) {
+            deleted_files = deleted_files.substring(0, deleted_files.length - 1);
+        }
+        document.getElementsByName("modified_files")[0].value = modified_files;
+        document.getElementsByName("deleted_files")[0].value = deleted_files;
+    }
+</script>
 
-{% endblock %}
