replaced code and fixed image refresh

--- a/kooplexhub/kooplex/hub/templates/admin/index.html
+++ b/kooplexhub/kooplex/hub/templates/admin/index.html
@@ -34,7 +34,7 @@
     <div class="module">
         <a href="{% url 'refresh_images' %}">
           <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container " data-placement="top">
-            <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"> Valami</span>
+            <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"> Refresh Docker Images</span>
           </button>
         </a>
     </div>
