minor changes: git commands rendered in templates for didactic reasons, git pull, git revert fix, check remote chnges

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-gitform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-gitform.html
@@ -4,11 +4,15 @@
 
 <ul class="nav nav-tabs">
   <li class="active"><a href="#pane_commit" data-toggle="tab">Commit</a></li>
+  <li><a href="#pane_update" data-toggle="tab">Update</a></li>
   <li><a href="#pane_revert" data-toggle="tab">Revert</a></li>
 </ul>
 <div class="tab-content">
   <div id="pane_commit" class="tab-pane fade in active">
     {% include 'app/notebooks-commitform.html' %}
+  </div>
+  <div id="pane_update" class="tab-pane fade">
+    {% include 'app/notebooks-updateform.html' %}
   </div>
   <div id="pane_revert" class="tab-pane fade">
     {% include 'app/notebooks-revertform.html' %}
