--- a/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
@@ -26,6 +26,14 @@
       <input type="hidden" name="modified_files" value="" />
       <input type="hidden" name="deleted_files" value="" />
       <input type="hidden" name="commitall" value="false" />
+      <hr>
+      <p>In your favour the following commands are issued in the project folder:</p> 
+      <code> 
+git add &lt;names of modified and added files&gt;
+git rm &lt;names of deleted files&gt; .
+git commmit -m '&lt;your commit message&gt;'
+git push
+      </code>
     </div>   <!-- panel-body -->
     <div class="panel-footer" style="text-align: left;">
       <input type="submit" name="commitall" value="Commit and push" class="btn btn-primary" />
